# api_server

./: .gitignore  Cargo.toml  Rocket.toml  log4rs.yml
.github/workflows/: build.yml
config/: .gitignore  Rocket.ci.toml  default.toml
migrations/2020-08-06-053910_create_user/: up.sql
src/: config.rs  errors.rs  lib.rs  main.rs  models.rs  schema.rs  test.rs  utils.rs
src/account/: errors.rs  jwt.rs  mod.rs  models.rs  routes.rs
src/account/routes/: login.rs
src/errors/: error.rs  mod.rs  msg.rs
src/routes/: catchers.rs  default.rs  index.rs  mod.rs
