[package]
name = "gwy15"
version = "0.1.0"
authors = ["gwy15 <gwy15thu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# config
dotenv = "0.15.0"
config = "0.10.1"
# 
lazy_static = "1.4.0"
# logs
log = "0.4.11"
log4rs = { version = "0.13.0", features = [ "background_rotation", "fixed_window_roller", "gzip" ] }
# error handling
thiserror = "1.0.20"
# database related
chrono = "0.4.13"
diesel = { version = "1.4.5", features = ["postgres", "chrono"] }
diesel_migrations = "1.4.0"
# rocket
rocket = "0.4.5"
rocket_contrib = { version = "0.4.5", features = ["diesel_postgres_pool"] }
# serde
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.57"
# authentications
jsonwebtoken = "7.2.0"
ring = "0.16.15"
rand = "0.7.3"
base64 = "0.12.3"
